Implement error page

--- a/resources/styles/shared/shared.scss
+++ b/resources/styles/shared/shared.scss
@@ -1,1 +1,4 @@
-@import "./colours.scss";
+@import "./colours";
+@import "./containers/FullScreenCentered";
+@import "./panels/Panel";
+@import "./panels/InformationPanel";
