--- a/resources/templates/application/reactHost.pug
+++ b/resources/templates/application/reactHost.pug
@@ -3,6 +3,9 @@ html
         title Initializing CROSSCOM
         meta(name="description" content="CROSSCOM is a platform to manage and run combined unit ARMA III operations.")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
+        script(src="https://use.fontawesome.com/98c8c3c326.js")
+        link(href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet")
+        link(rel="stylesheet" type="text/css" href="/statics/styles/index.css")
     
     body
         div(id="render_node")
