--- a/resources/styles/index.scss
+++ b/resources/styles/index.scss
@@ -1,2 +1,2 @@
-@import "./shared/shared.scss";
-@import "./components/components.scss";
+@import "./shared/shared";
+@import "./components/components";
