--- a/resources/styles/shared/colours.scss
+++ b/resources/styles/shared/colours.scss
@@ -3,3 +3,4 @@ $white: #FFFFFF;
 $application-background: #222028;
 $panel-background: #263248;
 $active-font-color: #FF9800;
+$negative-action: #4C1B1B;
