Work on signup page

--- a/resources/styles/components/components.scss
+++ b/resources/styles/components/components.scss
@@ -1,3 +1,4 @@
 @import "./template/ApplicationTemplate";
 @import "./template/Navbar";
 @import "./template/MenuDrawer";
+@import "./onboarding/Onboarding";
