--- a/resources/styles/shared/panels/Panel.scss
+++ b/resources/styles/shared/panels/Panel.scss
@@ -1,7 +1,9 @@
 .panel {
 
-    margin-top: 50px;
+    margin-top: 25px;
+    margin-bottom: 50px;
     display: block;
+    vertical-align: top;
 
 }
 
@@ -26,7 +28,7 @@
     padding: 20px;
     font-family: 'Lato', sans-serif;
     color: $white;
-
+    
     &.preformatted {
         white-space: pre-line;
     }
