--- a/resources/styles/components/onboarding/Onboarding.scss
+++ b/resources/styles/components/onboarding/Onboarding.scss
@@ -50,6 +50,66 @@
     }
 }
 
+.onboarding-form--single_panel {
+
+    width: 600px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    .panel {
+        display: block;
+        position: relative;
+
+        .panel_body {
+
+            .onboarding-form--select-button {
+                left: 195px;
+            }
+
+        }
+    }
+
+}
+
+.onboarding-form--label {
+
+    margin-top: 25px;
+    margin-bottom: 10px;
+    display: block;
+    text-transform: uppercase;
+    font-family: "Lato", sans-serif;
+    font-size: 14px;
+    color: $active-font-color;
+
+}
+
+#dob_day {
+    width: 50px;
+    height: 40px;
+    margin-right: 20px;
+    font-family: "Lato", sans-serif;
+    text-align: center;
+    font-size: 16px;
+}
+
+#dob_month {
+    width: 50px;
+    height: 40px;
+    margin-right: 20px;
+    font-family: "Lato", sans-serif;
+    text-align: center;
+    font-size: 16px;
+}
+
+#dob_year {
+    width: 100px;
+    height: 40px;
+    font-family: "Lato", sans-serif;
+    text-align: center;
+    font-size: 16px;
+}
+
 .onboarding-form--select-button {
 
     position: absolute;
@@ -63,6 +123,7 @@
     background-color: $black;
     color: $white;
     text-decoration: none;
+    text-transform: uppercase;
 
     &:hover {
         background-color: $active-font-color;
