--- a/resources/styles/shared/panels/Panel.scss
+++ b/resources/styles/shared/panels/Panel.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
 
 }
 
@@ -28,7 +29,7 @@
     padding: 20px;
     font-family: 'Lato', sans-serif;
     color: $white;
-    
+
     &.preformatted {
         white-space: pre-line;
     }
