--- a/resources/templates/application/reactHost.pug
+++ b/resources/templates/application/reactHost.pug
@@ -6,6 +6,7 @@ html
         script(src="https://use.fontawesome.com/98c8c3c326.js")
         link(href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet")
         link(rel="stylesheet" type="text/css" href="/statics/styles/index.css")
+        link(rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css")
     
     body
         div(id="render_node")
